# jyn

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dist-workspace.toml  justfile
.claude/: CLAUDE.md
.github/actions/sign-windows-exe/: action.yml
.github/workflows/: ci.yaml  publish.yml  release.yml  winget-submit.yml
.joy/: config.defaults.yaml  config.yaml  project.yaml
.joy/capabilities/: assign.md  conceive.md  create.md  delete.md  design.md  document.md  implement.md  manage.md  plan.md  review.md  test.md
.joy/items/: JOT-0001-make-docs-self-contained-reduce.yaml  JOT-0002-jot-cli-on-joy-core-base.yaml  JOT-0003-extend-joy-core-item-with-due-date-and.yaml  JOT-0004-jot-core-todo-struct-with-serde.yaml  JOT-0005-jot-core-rrule-recurrence-model.yaml  JOT-0006-jot-core-completion-logic-with-next.yaml  JOT-0007-jot-add-create-todo-with-title-due.yaml  JOT-0008-jot-ls-list-open-todos-with-filters.yaml  JOT-0009-jot-show-detail-view-of-a-todo.yaml  JOT-000A-jot-done-complete-todo-handle-recurrence.yaml  JOT-000B-jot-edit-modify-title-due-priority-tags.yaml  JOT-000C-jot-rm-delete-a-todo.yaml  JOT-000D-shell-completions-for-jot-cli-bash-zsh.yaml  JOT-000E-publish-jot-core-and-jot-cli-to-crates.yaml  JOT-000F-readme-md-with-installation-quickstart.yaml  JOT-0010-getting-started-tutorial-in-docs-user.yaml  JOT-0011-jot-sync-and-web-access.yaml  JOT-0012-jot-sync-push-and-pull-via-git-remote.yaml  JOT-0013-integrate-jot-core-into-platform-rest.yaml  JOT-0014-integrate-jot-todo-list-into-web.yaml  JOT-0015-integrate-jot-todo-detail-and-editing.yaml  JOT-0016-yaml-aware-git-merge-driver-for-jot.yaml  JOT-0017-update-readme-and-tutorial-with-sync.yaml  JOT-0018-caldav-and-notifications-for-jot.yaml  JOT-0019-vtodo-mapping-jot-yaml-to-from.yaml  JOT-001A-integrate-vtodo-mapping-into-caldav.yaml  JOT-001B-valarm-mapping-for-reminders.yaml  JOT-001C-rrule-passthrough-for-recurring-todos.yaml  JOT-001D-integrate-jot-into-notification-service.yaml  JOT-001E-e2e-test-roundtrip-jot-cli-to-apple.yaml  JOT-001F-update-tutorial-with-apple-reminders.yaml  JOT-0020-publish-jot-core-jot-cli-to-crates-io.yaml  JOT-0021-59-follow-up-on-jot-cli-crate-name-transfer.yaml  JOT-0022-5F-add-json-output-to-all-commands.yaml  JOT-0023-A0-integrate-joy-plugins-into-jot-cli.yaml  JOT-0024-40-add-app-flag-to-launch-native-app-plugin.yaml  JOT-0025-C1-publish-prebuilt-binaries-via-cargo-dist.yaml  JOT-0026-68-add-just-publish-recipe-for-crates-io.yaml  JOT-0027-A5-add-ci-workflow-gh-actions-wrapper-for.yaml  JOT-0028-2A-make-just-publish-idempotent-against.yaml  (+54 more)
.joy/milestones/: JOT-MS-01-jot-im-terminal.yaml  JOT-MS-02-sync-and-first-webui.yaml  JOT-MS-03-apple-reminders-and-notifications.yaml
.joy/releases/: JOT-v0.2.1.yaml  JOT-v0.2.2.yaml  JOT-v0.2.3.yaml  JOT-v0.2.4.yaml  JOT-v0.3.0.yaml  JOT-v0.3.1.yaml  JOT-v0.4.0.yaml  JOT-v0.5.0.yaml  JOT-v0.5.1.yaml  JYN-v0.6.0.yaml  JYN-v0.6.1.yaml  JYN-v0.6.2.yaml  JYN-v0.6.3.yaml  JYN-v0.6.4.yaml  JYN-v0.6.5.yaml  JYN-v0.6.6.yaml  JYN-v0.7.0.yaml
crates/jot-cli/: Cargo.toml  README.md
crates/jot-cli/src/: color.rs  main.rs
crates/jot-cli/src/commands/: config.rs  mod.rs
crates/jot-core/: Cargo.toml
crates/jot-core/src/: config.rs  display.rs  due.rs  error.rs  lib.rs  model.rs  storage.rs
crates/jyn/: Cargo.toml  README.md
crates/jyn-cli/: Cargo.toml  README.md
crates/jyn-cli/docs/user/: Tutorial.md
crates/jyn-cli/src/: color.rs  lib.rs  main.rs
crates/jyn-cli/src/commands/: config.rs  mod.rs  tutorial.rs  update.rs
crates/jyn-core/: Cargo.toml  README.md
crates/jyn-core/src/: config.rs  due.rs  error.rs  lib.rs  model.rs  recurrence.rs  storage.rs
crates/jyn/src/: main.rs
docs/dev/: Architecture.md  Vision.md
docs/dev/architecture/: README.md
docs/dev/vision/: README.md
docs/user/: Tutorial.md
tests/integration/: config.bats  recurrence.bats  recurrence_done.bats  recurrence_human.bats  setup.bash  tutorial.bats  update.bats  user-journey.bats  workspace.bats
