[workspace]
resolver = "2"
members = [
    "crates/jyn-core",
    "crates/jyn-cli",
    "crates/jyn",
]

[workspace.dependencies]
joy-core = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
