[workspace]
resolver = "2"
members = [
    "crates/jyn-core",
    "crates/jyn-cli",
    "crates/jyn",
]

[workspace.dependencies]
joy-core = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Local development override: when building inside the umbrella checkout,
# resolve `joy-core` from the sibling `joy` submodule instead of crates.io.
# `cargo publish` strips this section automatically, so external users
# running `cargo install jyn-cli` continue to fetch joy-core from the
# registry. Replaces the `paths = [...]` override that used to live in
# umbrella/.cargo/config.toml; see Cargo's recommendation against `paths`
# overrides that change transitive dependencies.
[patch.crates-io]
joy-core = { path = "../joy/crates/joy-core" }
