[package]
name = "jot-cli"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Personal task manager - Git-native, CLI-first, CalDAV-ready"
repository = "https://github.com/joyint/jot"
homepage = "https://joyint.com/en/jot"
readme = "README.md"
default-run = "jot"

[[bin]]
name = "jot"
path = "src/main.rs"

[dependencies]
jot-core = { version = "0.2.1", path = "../jot-core" }
joy-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_yaml_ng = { workspace = true }
