[package]
name = "jot-core"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Core library for Jot personal task manager - extends joy-core with recurrence"
repository = "https://github.com/joyint/jot"
homepage = "https://joyint.com/en/jot"
readme = "README.md"

[dependencies]
joy-core = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
