[package]
name = "jyn-core"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Core library for Jyn personal task manager - extends joy-core with recurrence"
repository = "https://github.com/joyint/jyn"
homepage = "https://joyint.com/en/jyn"
readme = "README.md"

[dependencies]
joy-core = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# Full RFC 5545 recurrence rules. Core to jyn (recurring personal tasks),
# so the dependency is justified despite the minimalism guideline.
rrule = "0.14"

[dev-dependencies]
tempfile = "3"
