[package]
name = "jyn"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Personal task manager - Git-native, CLI-first, CalDAV-ready"
repository = "https://github.com/joyint/jyn"
homepage = "https://joyint.com/en/jyn"
readme = "README.md"

[[bin]]
name = "jyn"
path = "src/main.rs"

[dependencies]
jyn-cli = { version = "0.5.1", path = "../jyn-cli" }
anyhow = { workspace = true }
