[package]
name = "jyn"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Personal task manager - Git-native, CLI-first, CalDAV-ready"
repository = "https://github.com/joyint/jyn"
homepage = "https://joyint.com/en/jyn"
readme = "README.md"

[[bin]]
name = "jyn"
path = "src/main.rs"

[dependencies]
jyn-cli = { version = "0.6.2", path = "../jyn-cli" }
anyhow = { workspace = true }

# Exclude this alias crate from cargo-dist. Both jyn-cli (real crate)
# and jyn (thin alias) produce a 'jyn' binary, which is a warning
# locally but a hard linker error on Windows inside cargo-dist's
# workspace build. The alias exists so 'cargo install jyn' works on
# crates.io -- prebuilt GitHub release binaries come from jyn-cli.
[package.metadata.dist]
dist = false
